--- a/Herencia/Herencia.csproj
+++ b/Herencia/Herencia.csproj
@@ -34,6 +34,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Publicacion.cs" />
     <Compile Include="PublicacionImagen.cs" />
+    <Compile Include="PublicacionVideo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
